# h5i-ctx2img

./: Cargo.toml  README.md  main.md  manifests.jsonl
.github/workflows/: ci.yml  release.yml
crates/c2m-cli/src/: bench.rs  main.rs  ops.rs  providers.rs
crates/c2m-core/src/: lib.rs  sections.rs
crates/c2m-index/src/: legend.rs
crates/c2m-layout/src/: lib.rs
crates/c2m-render/src/: lib.rs  scene.rs  theme.rs  theme_vlm.rs
crates/ctx2img-cli/: Cargo.toml
crates/ctx2img-cli/src/: bench.rs  main.rs  ops.rs
crates/ctx2img-core/: Cargo.toml
crates/ctx2img-core/src/: analysis.rs  embed.rs  factsheet.rs  graph.rs  hazard.rs  history.rs  ingest.rs  lib.rs  parse.rs  regions.rs  relevance.rs  sections.rs  tokens.rs  types.rs
crates/ctx2img-eval/: Cargo.toml
crates/ctx2img-eval/src/: lib.rs  live.rs  probes.rs  synthetic.rs
crates/ctx2img-index/: Cargo.toml
crates/ctx2img-index/src/: cache.rs  handles.rs  legend.rs  lib.rs  sidecar.rs  workspace.rs
crates/ctx2img-layout/: Cargo.toml
crates/ctx2img-layout/src/: field.rs  grid.rs  lib.rs  noise.rs  rect.rs  trace.rs
crates/ctx2img-render/: Cargo.toml
crates/ctx2img-render/src/: display.rs  lib.rs  paint.rs  raster.rs  scene.rs  svg.rs  text.rs  theme.rs  theme_parchment.rs  theme_vlm.rs
docs/: DESIGN.md
git-goals/: fix-overlap.md  fix-repo.md  main.md  readme-curl-install.md  wip.md
skills/c2m/: SKILL.md
skills/ctx2img/: SKILL.md
snapshots/: 07183743.md  20048550.md  215ef33f.md  28955d02.md  39bd2268.md  478f36b1.md  50cdfcaf.md  5a402e79.md  5d714dba.md  5dcbe71e.md  6c132fa4.md  928af88d.md  9a329cc2.md  a124e1c7.md  a456dc32.md  a5dbd5e5.md  b14d590f.md  b6d8e7a1.md  bff98589.md  ec95abba.md
