[workspace]
resolver = "2"
members = [
    "crates/ctx2img-core",
    "crates/ctx2img-index",
    "crates/ctx2img-layout",
    "crates/ctx2img-render",
    "crates/ctx2img-cli",
    "crates/ctx2img-eval",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/koukyosyumei/h5i-ctx2img"

[workspace.dependencies]
ctx2img-core = { path = "crates/ctx2img-core" }
ctx2img-index = { path = "crates/ctx2img-index" }
ctx2img-layout = { path = "crates/ctx2img-layout" }
ctx2img-render = { path = "crates/ctx2img-render" }
ctx2img-eval = { path = "crates/ctx2img-eval" }

anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
blake3 = "1"
rayon = "1.10"
ignore = "0.4"
petgraph = { version = "0.8", features = ["rayon"] }
clap = { version = "4", features = ["derive"] }
tiny-skia = "0.12"
fontdue = "0.9"
tree-sitter = "0.26"
streaming-iterator = "0.1"
tree-sitter-rust = "0.24"
tree-sitter-python = "0.25"
tree-sitter-javascript = "0.25"
tree-sitter-typescript = "0.23"
tree-sitter-go = "0.25"
tree-sitter-java = "0.23"
tempfile = "3"

# Heavy analysis in dev builds is unusable on real repos; optimize deps even in dev.
[profile.dev.package."*"]
opt-level = 2

[profile.release]
lto = "thin"
