[package]
name = "ctx2img-eval"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
ctx2img-core.workspace = true
ctx2img-index.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
tempfile.workspace = true
